Implementing Opening People Tab

--- a/src/components/sample.html
+++ b/src/components/sample.html
@@ -1,347 +1,58 @@
-<ul role="list" class="vaKmokvAkaOigwpLxCtSoIMmWBYUjI list-style-none">
-                          <li class="GCpANlcorEhwVxNFHLDnRNRcTkOchRDcKg">
-
-                            
-            
-          
-    <div class="WDysKnKwntWqWKjqDIQwMiddxTJWLEMUE" data-chameleon-result-urn="urn:li:company:1035" data-view-name="search-entity-result-universal-template">
-          
-    
-            
-    
-      <div class="linked-area flex-1
-          cursor-pointer">
-        
-      <div class="tuTMXrbxpdEWeeEYgQIoXBwMihzuPpOBmklNCWk">
-        <div class="CGpZDzGsZohUMprhihMpApIgtmUcJhPw">
-          <div class="display-flex align-items-center">    
-      <a class="NwvyTemnvomAkMRzZgdROYCGzuSuRHxpGE  scale-down " aria-hidden="true" tabindex="-1" href="https://www.linkedin.com/company/microsoft/" data-test-app-aware-link="">
-          
-    <div class="ivm-image-view-model   ">
-        
-    <div class="ivm-view-attr__img-wrapper
-        
-        "><img width="48" src="https://media.licdn.com/dms/image/v2/C560BAQE88xCsONDULQ/company-logo_100_100/company-logo_100_100/0/1630652622688/microsoft_logo?e=1749686400&amp;v=beta&amp;t=xmT7Ez1-Zp6Tgv3f1M07DKFa6uqGpvdHSjjcVIaeYec" loading="lazy" height="48" alt="Microsoft" id="ember2011" class="ivm-view-attr__img--centered EntityPhoto-square-3   evi-image lazy-image ember-view">
-    </div>
+<li class="grid grid__col--lg-8 block org-people-profile-card__profile-card-spacing">
+                <div>
   
-          </div>
-  
-      </a>
-  
-              
-          </div>
-        </div>
-        <div class="noQZNilcPrJJJwYgKgKRgfqSPrvCgMXtxYns ojDjrBYAaqSfSYOzihnSegRzvUjLGCpPzbU pt3 pb3 t-12 t-black--light">
-          <div class="mb1">
-            
-  <div class="t-roman t-sans">
-    
                   
-                
-    <div class="display-flex">
-      <span class="KIxnVgORDdGEjoXPjRoIcKWhsXabidEfrCg LjcOaXFzzEkmPLuNeRDUhkARgzbJtxGmfvk ">
-        <span class="BBmlVWuOolwuvynBWUdpCUILFAfgI
-            t-16">
-            <a class="NwvyTemnvomAkMRzZgdROYCGzuSuRHxpGE " href="https://www.linkedin.com/company/microsoft/" data-test-app-aware-link="">
- </a>
-</span>
-      </span>
-</div>
-  
-              
-              
-  </div>
-
-  
-    
-      <div class="ixvGQGCacqNXMOrFhgZuQJXpjpKNJaqvY
-          t-14 t-black t-normal">
-      </div>
-
-      <div class="qoUxXGCuUZLGgysEcFkbCpDByfAmfVecNY
-          t-14 t-normal">
-      </div>
-
-    
-  
-
-
-          </div>
-            <p class="jMtAQePtVjNZzdloaKMeEDqIFomZzPJsPigEvk
-                entity-result__summary--2-lines
-                t-12 t-black--light
-                mb1">
-              <!---->....<span class="white-space-pre"> </span><strong><!---->Microsoft<!----></strong><span class="white-space-pre"> </span>operates in 190 countries and is made up of approximately 228,000 passionate employees worldwide.<!---->
-            </p>
-
-            <div class="entity-result__insights t-12">
-              
-                  
-              
-  
-      
-    <div class="chkxglbdriRUgGFvJJrgaJBZTxwuSFprDmQw
-        ">
-      
-    
-      <a class="NwvyTemnvomAkMRzZgdROYCGzuSuRHxpGE  reusable-search-simple-insight__wrapping-link" href="https://www.linkedin.com/search/results/people/?origin=SHARED_CONNECTIONS_IN_COMPANY_CANNED_SEARCH&amp;network=%22F%22&amp;currentCompany=%5B10073178%2C3719%2C3238203%2C1035%2C3178875%2C1418841%2C3290211%2C19537%2C11206713%2C18612750%2C1889423%2C1148098%2C164951%2C3641570%2C165397%2C1638785%2C5097047%2C263515%2C1386954%2C589037%2C692068%2C2270931%2C3763403%2C30203%2C18086638%2C2446424%5D" data-test-app-aware-link="">
-        
-      
-          
-    <div class="ivm-image-view-model    reusable-search-simple-insight__image flex-shrink-zero mr1">
-        
-    <div class="ivm-view-attr__img-wrapper
-        
-        ">
-        <li-icon aria-hidden="true" type="people" class="ivm-view-attr__icon ivm-view-attr__img--aspect-fit " size="small"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" data-supported-dps="16x16" fill="currentColor" class="mercado-match" width="16" height="16" focusable="false">
-      <path d="M14 11.75V15H9v-3.25A1.75 1.75 0 0110.75 10h1.5A1.75 1.75 0 0114 11.75zM11.5 9A2.5 2.5 0 109 6.5 2.5 2.5 0 0011.5 9zM5 1a3 3 0 103 3 3 3 0 00-3-3zm.75 7h-1.5A2.25 2.25 0 002 10.25V15h6v-4.75A2.25 2.25 0 005.75 8z"></path>
-    </svg></li-icon>
-    </div>
-  
-          </div>
-  
-        <div class="reusable-search-simple-insight__text-container">
-          <span class="kzvnBFBCiAEgphJeboGVJyIKPltdIiyhFvc
-              
-              reusable-search-simple-insight__text--small
-              ">
-          </span>
-</div>
-      
-    
-      </a>
-  
-
-    </div>
-  
-      
-    <div class="chkxglbdriRUgGFvJJrgaJBZTxwuSFprDmQw
-        reusable-search-simple-insight--subsequent">
-      
-    
-      <a class="NwvyTemnvomAkMRzZgdROYCGzuSuRHxpGE  reusable-search-simple-insight__wrapping-link" href="https://www.linkedin.com/jobs/search?geoId=92000000&amp;f_C=1035%2C10073178%2C3719%2C3238203%2C3178875%2C1418841%2C3290211%2C19537%2C11206713%2C18612750%2C1889423%2C1148098%2C164951%2C3641570%2C165397%2C1638785%2C5097047%2C263515%2C1386954%2C589037%2C692068%2C2270931%2C3763403%2C30203%2C18086638%2C2446424" data-test-app-aware-link="">
-        
-      
-          
-    <div class="ivm-image-view-model    reusable-search-simple-insight__image flex-shrink-zero mr1">
-        
-    <div class="ivm-view-attr__img-wrapper
-        
-        ">
-
-        <li-icon aria-hidden="true" type="briefcase-icon" class="ivm-view-attr__icon ivm-view-attr__img--aspect-fit " size="small"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" data-supported-dps="16x16" fill="currentColor" width="16" height="16" focusable="false">
-      <path d="M14 4h-2V3a2 2 0 00-2-2H6a2 2 0 00-2 2v1H2a1 1 0 00-1 1v8a1 1 0 001 1h12a1 1 0 001-1V5a1 1 0 00-1-1zM6 3h4v1H6V3zm7 9H3V9h10v3zm0-4H3V6h10v2z"></path>
-    </svg></li-icon>
-    </div>
-  
-          </div>
-  
-        <div class="reusable-search-simple-insight__text-container">
-          <span class="kzvnBFBCiAEgphJeboGVJyIKPltdIiyhFvc
-              
-              reusable-search-simple-insight__text--small
-              ">
-          </span>
-</div>
-      
-    
-      </a>
-  
-
-    </div>
-  
-
-
-            
-              
-            </div>
-        </div>
-        <div class="naxBFfFPwXExKZSvYFFUBBinhyGoMFWCXVlg ojDjrBYAaqSfSYOzihnSegRzvUjLGCpPzbU">
-         
-    
-    <div>
-              
-      
-    
-        
-    <button aria-label="Following Microsoft" id="ember2059" class="artdeco-button artdeco-button--muted artdeco-button--2 artdeco-button--secondary ember-view" type="button"><!---->
-<span class="artdeco-button__text">
-    Following
-</span></button>
-
-  
-
-    </div>
-  
-
-              
-        </div>
-      </div>
-    
-      </div>
-  
-  
-          
-
-    </div>
-  
-      
-          
-                          </li>
-
-                          <li class="GCpANlcorEhwVxNFHLDnRNRcTkOchRDcKg">
-       
-            
-          
-    <div class="WDysKnKwntWqWKjqDIQwMiddxTJWLEMUE" data-chameleon-result-urn="urn:li:company:96411081" data-view-name="search-entity-result-universal-template">
-          
-    
-            
-    
-      <div class="linked-area flex-1
-          cursor-pointer">
-        
-      <div class="tuTMXrbxpdEWeeEYgQIoXBwMihzuPpOBmklNCWk">
-        <div class="CGpZDzGsZohUMprhihMpApIgtmUcJhPw">
-          <div class="display-flex align-items-center">
-          
-                
-      <a class="NwvyTemnvomAkMRzZgdROYCGzuSuRHxpGE  scale-down " aria-hidden="true" tabindex="-1" href="https://www.linkedin.com/company/microsoft-azure/" data-test-app-aware-link="">
-          
-    <div class="ivm-image-view-model   ">
-        
-    <div class="ivm-view-attr__img-wrapper ">
-<img width="48" src="https://media.licdn.com/dms/image/v2/D560BAQGtwKUNwBubxg/company-logo_100_100/company-logo_100_100/0/1688144190823/microsoft_azure_logo?e=1749686400&amp;v=beta&amp;t=Ufvoftk12ea_z8rF0Z9kDuPtzUpSAqGRvS7jWrnCPTo" loading="lazy" height="48" alt="Microsoft Azure" id="ember2012" class="ivm-view-attr__img--centered EntityPhoto-square-3   evi-image lazy-image ember-view">
-    </div>
-  
-          </div>
-  
-      </a>
-  
-              
-          </div>
-        </div>
-        <div class="noQZNilcPrJJJwYgKgKRgfqSPrvCgMXtxYns ojDjrBYAaqSfSYOzihnSegRzvUjLGCpPzbU pt3 pb3 t-12 t-black--light">
-          <div class="mb1">
-            
-  <div class="t-roman t-sans">
-    
-                  
-                
-    <div class="display-flex">
-      <span class="KIxnVgORDdGEjoXPjRoIcKWhsXabidEfrCg LjcOaXFzzEkmPLuNeRDUhkARgzbJtxGmfvk ">
-        <span class="BBmlVWuOolwuvynBWUdpCUILFAfgI
-            t-16">
-            <a class="NwvyTemnvomAkMRzZgdROYCGzuSuRHxpGE " href="https://www.linkedin.com/company/microsoft-azure/" data-test-app-aware-link="">
-</a>
- </span>
-      </span>
-</div>
-  
-              
-              
-  </div>
-
-  
-    
-      <div class="ixvGQGCacqNXMOrFhgZuQJXpjpKNJaqvY
-          t-14 t-black t-normal">
-      
-      </div>
-
-      <div class="qoUxXGCuUZLGgysEcFkbCpDByfAmfVecNY
-          t-14 t-normal">
-       
-      </div>
-
-    
-  
-
-
-          </div>
-
-
-            <p class="jMtAQePtVjNZzdloaKMeEDqIFomZzPJsPigEvk
-                entity-result__summary--2-lines
-                t-12 t-black--light
-                mb1">
-              <!---->Join the<span class="white-space-pre"> </span><strong><!---->Microsoft<!----></strong><span class="white-space-pre"> </span>Azure community to be the first to learn about tech innovations, industry trends, updates relevant to you and your team.<!---->
-            </p>
-
-            <div class="entity-result__insights t-12">
-              
-                  
-              
-  
-      
-    <div class="chkxglbdriRUgGFvJJrgaJBZTxwuSFprDmQw
-        ">
-      
-    
-      <a class="NwvyTemnvomAkMRzZgdROYCGzuSuRHxpGE  reusable-search-simple-insight__wrapping-link" href="https://www.linkedin.com/company/1035/" data-test-app-aware-link="">
-        
-      
-          
-    <div class="ivm-image-view-model    reusable-search-simple-insight__image flex-shrink-zero mr1">
-        
-    <div class="ivm-view-attr__img-wrapper
-        
-        ">
+    <section class="artdeco-card full-width EKfWcqWvhgtfHkPXKVFQxBUrJcTlzUfBOOMQ">
 <!---->
-<!---->          <img width="24" src="https://media.licdn.com/dms/image/v2/C560BAQE88xCsONDULQ/company-logo_100_100/company-logo_100_100/0/1630652622688/microsoft_logo?e=1749686400&amp;v=beta&amp;t=xmT7Ez1-Zp6Tgv3f1M07DKFa6uqGpvdHSjjcVIaeYec" loading="lazy" height="24" alt="" id="ember2013" class="ivm-view-attr__img--centered EntityPhoto-square-0   evi-image lazy-image ember-view">
-    </div>
   
-          </div>
-  
-        <div class="reusable-search-simple-insight__text-container">
-          <span class="kzvnBFBCiAEgphJeboGVJyIKPltdIiyhFvc
-              
-              reusable-search-simple-insight__text--small
-              ">
-            <!---->Page by<span class="white-space-pre"> </span><span><span><!---->Microsoft<!----></span></span>
-          </span>
-<!---->        </div>
-      
-    
-      </a>
-  
+      <img width="210" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" ariarole="presentation" loading="lazy" height="210" alt="" id="ember9914" class="evi-image lazy-image ghost-default ember-view org-people-profile-card__cover-photo org-people-profile-card__cover-photo--people">
 
-    </div>
-  
+      <div class="org-people-profile-card__profile-info">
+        <div id="ember9915" class="artdeco-entity-lockup artdeco-entity-lockup--stacked-center artdeco-entity-lockup--size-7 ember-view">
+          <div id="ember9916" class="artdeco-entity-lockup__image artdeco-entity-lockup__image--type-circle ember-view" type="circle">
 
+              <img width="104" src="https://media.licdn.com/dms/image/v2/D4E03AQGe3S8xhT8dGQ/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1686509542552?e=1747267200&amp;v=beta&amp;t=0xxcuhaKiKBjC9re_dTo4QmB1oEG6pFL1qR1jFZjOj8" loading="lazy" height="104" id="org-people-profile-card__profile-image-0" class="evi-image lazy-image ember-view">
+
+          
+</div>
+          <div id="ember9918" class="artdeco-entity-lockup__content ember-view">
+            <div id="ember9919" class="artdeco-entity-lockup__title ember-view">
+                  <div id="ember9921" class="ember-view lt-line-clamp lt-line-clamp--single-line MgwXvMyiCiEDaMyQkLmdcAtCFCMQQsStlL
+                    t-black" style="">
+      LinkedIn Member
+
+<!---->  </div>
 
             
-              
+</div>
+<!---->            <div id="ember9922" class="artdeco-entity-lockup__subtitle ember-view">
+                <div class="t-14 t-black--light t-normal">
+                    <div id="ember9924" class="ember-view lt-line-clamp lt-line-clamp--multi-line" style="-webkit-line-clamp: 2">
+      Software Engineer at DJI
+
+<!---->  </div>
+
+                </div>
             </div>
-        </div>
-        <div class="naxBFfFPwXExKZSvYFFUBBinhyGoMFWCXVlg ojDjrBYAaqSfSYOzihnSegRzvUjLGCpPzbU">
-<!---->            
-                  
-    
-    <div>
-              
-      
-    
+            <div id="ember9925" class="artdeco-entity-lockup__caption ember-view"></div>
+          </div>
         
-    <button aria-label="Follow Microsoft Azure" id="ember2060" class="artdeco-button artdeco-button--2 artdeco-button--secondary ember-view" type="button"><!---->
-<span class="artdeco-button__text">
-    Follow
-</span></button>
-  
-      
-
-
-    </div>
-  
-
-              
-        </div>
-      </div>
+</div>
+          <span class="text-align-center">
+                <span id="ember9927" class="ember-view lt-line-clamp lt-line-clamp--multi-line t-12 t-black--light mt2" style="-webkit-line-clamp: 3">
+      <span class="lt-line-clamp__raw-line"></span>
     
-      </div>
-  
-  
-          
+<!---->  </span>
 
-    </div>
-</li>
+          </span>
+      </div>
+
+        <footer class="ph3 pb3">
+<!---->        </footer>
+    
+</section>
+  
+                
+</div>
+
+              </li>
